force-app/main/default/objects/ABHI_Endorsement_API__mdt/ABHI_Endorsement_API__mdt.object-meta.xml
<CustomObject>
    <label>ABHI Endorsement API</label>
    <pluralLabel>ABHI Endorsement APIs</pluralLabel>
</CustomObject>