force-app/main/default/objects/ABHI_Endorsement_API__mdt/fields/Mandatory_Fields__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Fields__c</fullName>
    <label>Mandatory Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>